--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "formidable": "^3.5.1",
     "ini": "^5.0.0",
-    "mysql2": "^3.11.0"
+    "mysql2": "^3.11.0",
+    "nodemailer": "^6.9.15",
+    "sharp": "^0.33.5"
   }
 }
