--- a/config/config.ini
+++ b/config/config.ini
@@ -1,9 +1,16 @@
 [server]
 host = localhost
 port = 9900
-[db]
+[mysqlDB]
 host = localhost
 port = 3306
 user = root
 password = nicole
 database = blog_prod
+[mongoDB]
+host = localhost
+port = 27017
+user = admin
+password = nicole
+database = user
+collection = info
