--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "formidable": "^3.5.1",
     "ini": "^5.0.0",
+    "mongo": "^0.1.0",
+    "mongodb": "^6.8.1",
     "mysql2": "^3.11.0",
     "nodemailer": "^6.9.15",
     "sharp": "^0.33.5"
