add rabbitmq and kafka module to extend the function for NodeJs

--- a/config/config.ini
+++ b/config/config.ini
@@ -18,3 +18,9 @@ collection = info
 host = localhost
 user = user
 password = abc123
+[kafka]
+clientIP = my_nodejs
+brokers_1 = localhost:29092
+brokers_2 = localhost:39092
+brokers_3 = localhost:49092
+
