--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "amqplib": "^0.10.4",
     "formidable": "^3.5.1",
     "ini": "^5.0.0",
+    "kafkajs": "^2.2.4",
     "mongo": "^0.1.0",
     "mongodb": "^6.8.1",
     "mysql2": "^3.11.0",
